# Baseball-Catcher

./: .gitignore  HardWare.cpp  Hardware.h
QT/: CMakeLists.txt  ball_catcher.cpp  ball_catcher.h  main.cpp
